# jive

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  excel_exporter.py  impact_repo_client.py  jira_client.py  logger.py  main.py  models.py  proforma_parser.py  pyproject.toml  pyproject.toml.old  report_formatter.py  uv.lock.old  worker.py  worker_utils.py
.github/workflows/: api_deploy_to_acr.yml  api_pytest.yml  api_ruff_check.yml  deploy_to_azure.yml  publish_release.yml  push_to_azure_acr.yml  push_to_azure_containerapp.yml  worker_deploy_to_acr.yml  worker_pytest.yml  worker_ruff_check.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/src/api/: __init__.py  config.py  logger.py  main.py  models.py
api/src/tests/: test_secure_link_integration.py  test_webhook.py
data/: issue_createmeta.json  request_type_fields_dev.json  request_type_fields_prod.json  request_types.json  servicedesk_info.json
infra/: main.bicep
infra/modules/: acr.bicep  environment.bicep  ingress.bicep  keyvault.bicep  storage.bicep  worker.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
jira/: jira_client.py
local/: Dockerfile.local  Dockerfile.local.old  README.md  debug_gdt.py  docker-compose-local.yml  docker-compose.yml  explore_jira_proforma.py  proforma_GDT-31.json  proforma_GDT-32.json  pyproject.toml  test_repo_download_local.py  test_webhook_local.py  trigger_gdt.py
scripts/: create_test_ticket.py  fetch_fields.py
tests/: helpers.py  test_excel_exporter.py  test_gdt_worker.py  test_jira_client.py  test_models.py  test_proforma_repo_resolution.py  test_report_formatter.py  test_secure_link_integration.py  test_webhook.py  test_worker.py  test_worker_utils.py
worker/: .dockerignore  .env.example  Dockerfile  Dockerfile.local  README.md  pyproject.toml
worker/src/tests/: helpers.py  test_excel_exporter.py  test_jira_client.py  test_models.py  test_proforma_repo_resolution.py  test_report_formatter.py  test_secure_link_integration.py  test_worker.py  test_worker_utils.py
worker/src/worker/: config.py  excel_exporter.py  impact_repo_client.py  logger.py  main.py  models.py  proforma_parser.py  report_formatter.py  worker_utils.py
worker/src/worker/jira/: jira_client.py  models.py  proforma_parser.py
